--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,14 @@
     <!-- <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> -->
     <title>EverThink</title>
   </head>
-
+<style>
+body{
+    font-family:'Montserrat', sans-serif;
+    
+    background: rgb(63,94,251);
+    background: linear-gradient(90deg, rgba(63,94,251,1) 2%, rgba(252,70,107,1) 49%); 
+}
+</style>
   <body>
     <div id="root"></div>
     <script src="./App.js"></script>
